--- a/src/main/angular/src/app/component/display/display-choose-hall/display-choose-hall.component.html
+++ b/src/main/angular/src/app/component/display/display-choose-hall/display-choose-hall.component.html
@@ -1,3 +1,5 @@
-<div *ngFor="let hall of halls">
-  <button mat-button (click)="onHallClick(hall)">{{hall.name}}</button>
-</div>
+@for (hall of halls; track hall) {
+  <div>
+    <button mat-button (click)="onHallClick(hall)">{{hall.name}}</button>
+  </div>
+}
