--- a/src/main/angular/src/app/component/admin/admin-game-overview/admin-game-overview.component.html
+++ b/src/main/angular/src/app/component/admin/admin-game-overview/admin-game-overview.component.html
@@ -1,51 +1,52 @@
 <div class="admin-games">
-  <div *ngFor="let gameHallAssingment of gamesHallAssingments" [style.width]="widthPerHallTable" class="hall-games-container">
-    <h1>{{gameHallAssingment.hall.name}}</h1>
-    <table mat-table [dataSource]="gameHallAssingment.games">
-      <ng-container matColumnDef="time">
-        <th mat-header-cell *matHeaderCellDef>Zeit</th>
-        <td mat-cell *matCellDef="let element"> {{element.startDate | date: 'HH:mm'}}</td>
-      </ng-container>
-      <ng-container matColumnDef="teamHome">
-        <th mat-header-cell *matHeaderCellDef>Heim</th>
-        <td mat-cell *matCellDef="let element"> {{element.teamHome.name}}</td>
-      </ng-container>
-      <ng-container matColumnDef="goalsTeamHome">
-        <th mat-header-cell *matHeaderCellDef>Tore</th>
-        <td mat-cell *matCellDef="let element"
+  @for (gameHallAssingment of gamesHallAssingments; track gameHallAssingment) {
+    <div [style.width]="widthPerHallTable" class="hall-games-container">
+      <h1>{{gameHallAssingment.hall.name}}</h1>
+      <table mat-table [dataSource]="gameHallAssingment.games">
+        <ng-container matColumnDef="time">
+          <th mat-header-cell *matHeaderCellDef>Zeit</th>
+          <td mat-cell *matCellDef="let element"> {{element.startDate | date: 'HH:mm'}}</td>
+        </ng-container>
+        <ng-container matColumnDef="teamHome">
+          <th mat-header-cell *matHeaderCellDef>Heim</th>
+          <td mat-cell *matCellDef="let element"> {{element.teamHome.name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="goalsTeamHome">
+          <th mat-header-cell *matHeaderCellDef>Tore</th>
+          <td mat-cell *matCellDef="let element"
             [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamHome}}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="placeholder">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">:</td>
-      </ng-container>
-      <ng-container matColumnDef="goalsTeamGuest">
-        <th mat-header-cell *matHeaderCellDef>Tore</th>
-        <td mat-cell *matCellDef="let element"
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="placeholder">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">:</td>
+        </ng-container>
+        <ng-container matColumnDef="goalsTeamGuest">
+          <th mat-header-cell *matHeaderCellDef>Tore</th>
+          <td mat-cell *matCellDef="let element"
             [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamGuest}}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="teamGuest">
-        <th mat-header-cell *matHeaderCellDef>Gast</th>
-        <td mat-cell *matCellDef="let element"> {{element.teamGuest.name}}</td>
-      </ng-container>
-      <ng-container matColumnDef="resetButton">
-        <th mat-header-cell *matHeaderCellDef>Zurücksetzen</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-flat-button (click)="resetGame(element)">R</button>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="notifyButton">
-        <th mat-header-cell *matHeaderCellDef>Benachrichtigen</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-flat-button (click)="notifyGame(element)">Benachrichtigen</button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-          [ngClass]="{gray: row.state == 'DONE', live: row.live}"></tr>
-    </table>
-  </div>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="teamGuest">
+          <th mat-header-cell *matHeaderCellDef>Gast</th>
+          <td mat-cell *matCellDef="let element"> {{element.teamGuest.name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="resetButton">
+          <th mat-header-cell *matHeaderCellDef>Zurücksetzen</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-flat-button (click)="resetGame(element)">R</button>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="notifyButton">
+          <th mat-header-cell *matHeaderCellDef>Benachrichtigen</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-flat-button (click)="notifyGame(element)">Benachrichtigen</button>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+        [ngClass]="{gray: row.state == 'DONE', live: row.live}"></tr>
+      </table>
+    </div>
+  }
 </div>
