--- a/src/main/angular/src/app/component/display/display-category-details/display-category-details.component.html
+++ b/src/main/angular/src/app/component/display/display-category-details/display-category-details.component.html
@@ -13,7 +13,7 @@
         <ng-container matColumnDef="goalsTeamHome">
           <th mat-header-cell *matHeaderCellDef>Tore</th>
           <td mat-cell *matCellDef="let element"
-              [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamHome}}</td>
+          [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamHome}}</td>
         </ng-container>
         <ng-container matColumnDef="placeholder">
           <th mat-header-cell *matHeaderCellDef></th>
@@ -22,7 +22,7 @@
         <ng-container matColumnDef="goalsTeamGuest">
           <th mat-header-cell *matHeaderCellDef>Tore</th>
           <td mat-cell *matCellDef="let element"
-              [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamGuest}}</td>
+          [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamGuest}}</td>
         </ng-container>
         <ng-container matColumnDef="teamGuest">
           <th mat-header-cell *matHeaderCellDef>Gast</th>
@@ -42,8 +42,12 @@
         <ng-container matColumnDef="index">
           <th mat-header-cell *matHeaderCellDef>Platz</th>
           <td mat-cell *matCellDef="let element;let i = index;">
-            <span *ngIf="element.category.state !=='FINISHED'">{{i + 1}}</span>
-            <span *ngIf="element.category.state ==='FINISHED'">{{element.rank}}</span>
+            @if (element.category.state !=='FINISHED') {
+              <span>{{i + 1}}</span>
+            }
+            @if (element.category.state ==='FINISHED') {
+              <span>{{element.rank}}</span>
+            }
           </td>
         </ng-container>
         <ng-container matColumnDef="name">
@@ -69,14 +73,16 @@
 <div class="visible-print">
   <table class="print-table">
     <thead>
-    <tr>
-      <td>Rang</td>
-      <td>Name</td>
-    </tr>
+      <tr>
+        <td>Rang</td>
+        <td>Name</td>
+      </tr>
     </thead>
-    <tr *ngFor="let team of teams">
-      <td>{{team.rank}}</td>
-      <td>{{team.name}}</td>
-    </tr>
+    @for (team of teams; track team) {
+      <tr>
+        <td>{{team.rank}}</td>
+        <td>{{team.name}}</td>
+      </tr>
+    }
   </table>
 </div>
