--- a/src/main/angular/src/app/component/display/display-category/display-category.component.html
+++ b/src/main/angular/src/app/component/display/display-category/display-category.component.html
@@ -5,8 +5,12 @@
       <ng-container matColumnDef="index">
         <th mat-header-cell *matHeaderCellDef>Platz</th>
         <td mat-cell *matCellDef="let element;let i = index;">
-          <span *ngIf="_category.state !=='FINISHED'">{{i + 1}}</span>
-          <span *ngIf="_category.state ==='FINISHED'">{{element.rank}}</span>
+          @if (_category.state !=='FINISHED') {
+            <span>{{i + 1}}</span>
+          }
+          @if (_category.state ==='FINISHED') {
+            <span>{{element.rank}}</span>
+          }
         </td>
       </ng-container>
       <ng-container matColumnDef="name">
@@ -24,49 +28,49 @@
 
       <tr mat-header-row *matHeaderRowDef="displayedColumnsTeams"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumnsTeams;" [class.yellow]="!row.paid"
-          [class.hidden]="row.placeholder"></tr>
+      [class.hidden]="row.placeholder"></tr>
     </table>
   </div>
-  <div class="games" *ngIf="games.length > 0">
-    <h1>Spiele</h1>
-    <table mat-table [dataSource]="games">
-      <ng-container matColumnDef="time">
-        <th mat-header-cell *matHeaderCellDef>Zeit</th>
-        <td mat-cell *matCellDef="let element"> {{element.startDate | date: 'HH:mm'}}</td>
-      </ng-container>
-      <ng-container matColumnDef="teamHome">
-        <th mat-header-cell *matHeaderCellDef>Heim</th>
-        <td mat-cell *matCellDef="let element" [class.semi-final]="element.type === 'SEMI_FINAL'"
-            [class.final]="element.type === 'FINAL'"> {{element.teamHome.name}}</td>
-      </ng-container>
-      <ng-container matColumnDef="goalsTeamHome">
-        <th mat-header-cell *matHeaderCellDef>Tore</th>
-        <td mat-cell *matCellDef="let element"
-            [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamHome}}</td>
-      </ng-container>
-      <ng-container matColumnDef="placeholder">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">:</td>
-      </ng-container>
-      <ng-container matColumnDef="goalsTeamGuest">
-        <th mat-header-cell *matHeaderCellDef>Tore</th>
-        <td mat-cell *matCellDef="let element"
-            [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamGuest}}</td>
-      </ng-container>
-      <ng-container matColumnDef="teamGuest">
-        <th mat-header-cell *matHeaderCellDef>Gast</th>
-        <td mat-cell *matCellDef="let element" [class.semi-final]="element.type === 'SEMI_FINAL'"
-            [class.final]="element.type === 'FINAL'"> {{element.teamGuest.name}}</td>
-      </ng-container>
-      <ng-container matColumnDef="hall">
-        <th mat-header-cell *matHeaderCellDef>Halle</th>
-        <td mat-cell *matCellDef="let element"> {{element.hall.name}}</td>
-      </ng-container>
-
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumnsGames"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumnsGames;"></tr>
-    </table>
-  </div>
+  @if (games.length > 0) {
+    <div class="games">
+      <h1>Spiele</h1>
+      <table mat-table [dataSource]="games">
+        <ng-container matColumnDef="time">
+          <th mat-header-cell *matHeaderCellDef>Zeit</th>
+          <td mat-cell *matCellDef="let element"> {{element.startDate | date: 'HH:mm'}}</td>
+        </ng-container>
+        <ng-container matColumnDef="teamHome">
+          <th mat-header-cell *matHeaderCellDef>Heim</th>
+          <td mat-cell *matCellDef="let element" [class.semi-final]="element.type === 'SEMI_FINAL'"
+          [class.final]="element.type === 'FINAL'"> {{element.teamHome.name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="goalsTeamHome">
+          <th mat-header-cell *matHeaderCellDef>Tore</th>
+          <td mat-cell *matCellDef="let element"
+          [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamHome}}</td>
+        </ng-container>
+        <ng-container matColumnDef="placeholder">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">:</td>
+        </ng-container>
+        <ng-container matColumnDef="goalsTeamGuest">
+          <th mat-header-cell *matHeaderCellDef>Tore</th>
+          <td mat-cell *matCellDef="let element"
+          [class.font-white]="element.state === 'OPEN'"> {{element.goalsTeamGuest}}</td>
+        </ng-container>
+        <ng-container matColumnDef="teamGuest">
+          <th mat-header-cell *matHeaderCellDef>Gast</th>
+          <td mat-cell *matCellDef="let element" [class.semi-final]="element.type === 'SEMI_FINAL'"
+          [class.final]="element.type === 'FINAL'"> {{element.teamGuest.name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="hall">
+          <th mat-header-cell *matHeaderCellDef>Halle</th>
+          <td mat-cell *matCellDef="let element"> {{element.hall.name}}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsGames"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsGames;"></tr>
+      </table>
+    </div>
+  }
 </div>
 <h1 class="title">{{_category?.name}}</h1>
