--- a/src/main/angular/src/app/component/referee/referee-halls/referee-halls.component.html
+++ b/src/main/angular/src/app/component/referee/referee-halls/referee-halls.component.html
@@ -1,5 +1,7 @@
 <div class="refree-hall">
-  <div *ngFor="let hall of halls">
-    <button mat-button (click)="onHallChoose(hall)">{{hall.name}}</button>
-  </div>
+  @for (hall of halls; track hall) {
+    <div>
+      <button mat-button (click)="onHallChoose(hall)">{{hall.name}}</button>
+    </div>
+  }
 </div>
