fix game plan and small ui improvements

--- a/src/main/angular/src/app/component/display/display-choose-hall/display-choose-hall.component.html
+++ b/src/main/angular/src/app/component/display/display-choose-hall/display-choose-hall.component.html
@@ -1,5 +1,5 @@
 @for (hall of halls; track hall) {
-  <div>
-    <button mat-button (click)="onHallClick(hall)">{{hall.name}}</button>
+  <div >
+    <button class="btn" (click)="onHallClick(hall)">{{hall.name}}</button>
   </div>
 }
