--- a/src/main/angular/src/app/component/referee/referee-games/referee-game/referee-game-dialog/referee-game-dialog.component.html
+++ b/src/main/angular/src/app/component/referee/referee-games/referee-game/referee-game-dialog/referee-game-dialog.component.html
@@ -1,4 +1,6 @@
-<div>
-  {{data.text}}
+<div class="text-black">
+  <div>
+    {{data.text}}
+  </div>
+  <button mat-button (click)="close()">Schliessen</button>
 </div>
-<button mat-button (click)="close()">Schliessen</button>
