--- a/src/main/angular/src/app/component/referee/referee-halls/referee-halls.component.html
+++ b/src/main/angular/src/app/component/referee/referee-halls/referee-halls.component.html
@@ -1,7 +1,7 @@
 <div class="refree-hall">
   @for (hall of halls; track hall) {
     <div>
-      <button mat-button (click)="onHallChoose(hall)">{{hall.name}}</button>
+      <button class="btn" (click)="onHallChoose(hall)">{{hall.name}}</button>
     </div>
   }
 </div>
