--- a/src/main/angular/src/app/v2/pages/display/home/display-home-v2.component.html
+++ b/src/main/angular/src/app/v2/pages/display/home/display-home-v2.component.html
@@ -28,7 +28,7 @@
         id="margin-bottom"
         [(ngModel)]="config.margin.bottom"
       />
-      <span class="join-item kbd">
+      <span class="join-item kbd kbd-xl">
         PX
       </span>
     </div>
