--- a/src/main/angular/src/app/v2/pages/public/public-ranking/public-ranking.component.html
+++ b/src/main/angular/src/app/v2/pages/public/public-ranking/public-ranking.component.html
@@ -9,6 +9,7 @@
           <th>Team</th>
           <th>Tore</th>
           <th>Punkte</th>
+          <th>Spiele</th>
         </tr>
       </thead>
       <tbody>
@@ -19,6 +20,7 @@
             <td>{{ team.name }}</td>
             <td>{{ team.goalsShot }}:{{ team.goalsGotten }}</td>
             <td>{{ team.points }}</td>
+            <td>{{ team.groupGamesPlayedCount }}</td>
           </tr>
         }
       </tbody>
