--- a/src/main/angular/src/app/app.component.html
+++ b/src/main/angular/src/app/app.component.html
@@ -8,7 +8,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </label>
-        <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-white rounded-box w-52 z-50">
+        <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-white rounded-box w-52 z-50 text-black">
           <ng-container *ngTemplateOutlet="menuItems"></ng-container>
         </ul>
       </div>
