--- a/src/main/angular/src/app/app.component.html
+++ b/src/main/angular/src/app/app.component.html
@@ -21,11 +21,14 @@
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6 6 0 10-12 0v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
         </svg>
+        <ng-container *ngIf="(unreadNotificationCount$ | async) as cnt">
+          <span *ngIf="cnt > 0" class="badge badge-xs badge-primary">{{cnt}}</span>
+        </ng-container>
       </a>
     </div>
   </div>
   <!-- Desktop navbar with collapse functionality -->
-  <div class="navbar bg-base-100 navbar-desktop" [class.collapsed]="navbarCollapsed">
+  <div class="navbar bg-base-100 navbar-desktop hidden lg:visible" [class.collapsed]="navbarCollapsed">
     <div class="navbar-start">
       <a class="btn btn-ghost normal-case text-xl" routerLink="/v2/public">Yetis</a>
     </div>
@@ -40,6 +43,9 @@
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6 6 0 10-12 0v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
           </svg>
+          <ng-container *ngIf="(unreadNotificationCount$ | async) as cnt">
+            <span *ngIf="cnt > 0" class="badge badge-xs badge-primary">{{cnt}}</span>
+          </ng-container>
         </a>
         <button class="btn btn-ghost navbar-toggle" title="Toggle navbar" (click)="toggleNavbar()" aria-label="Toggle navigation">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" [class.rotate-180]="navbarCollapsed" fill="none" viewBox="0 0 24 24" stroke="currentColor">
